--- a/app/templates/target_currency.html
+++ b/app/templates/target_currency.html
@@ -1,4 +1,4 @@
-<select id="currency_form" required>
+<select name="target_currency" id="target_currency" required>
 	<option value="USD">USD</option>
         <option value="IDR">IDR</option>
         <option value="BGN">BGN</option>
